# pulumi-runpod

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  CHANGELOG.md  Makefile  README.md  go.mod  go.sum  release-please-config.json
.github/workflows/: build.yml  claude.yml  command-dispatch.yml  lint.yml  prerelease.yml  publish-npm.yml  release-please.yml  release.yml  release_command.yml  run-acceptance-tests.yml  weekly-pulumi-update.yml
docs/: _index.md  installation-configuration.md
examples/: base_test.go  go_test.go  nodejs_test.go  yaml_test.go
examples/dotnet/: Program.cs  Pulumi.yaml  runpod-example.csproj
examples/go/: Pulumi.yaml  go.mod  go.sum  main.go
examples/nodejs/: Pulumi.yaml  index.ts  package-lock.json  package.json
examples/python/: Pulumi.yaml  __main__.py  requirements.txt
pkg/runpod/: pod.go  (+9 more)
provider/: function_cpu_flavors.go  function_data_centers.go  function_gpu_types.go  go.mod  go.sum  provider.go  resource_endpoint.go  resource_network_volume.go  resource_pod.go  resource_registry_auth.go  resource_secret.go  resource_template.go
scripts/: local-install.sh  tidy-all.sh
sdk/python/: README.md  pyproject.toml
sdk/python/pulumi_runpod/: __init__.py  _inputs.py  _utilities.py  container_registry_auth.py  endpoint.py  get_cpu_flavors.py  get_data_centers.py  get_gpu_types.py  network_volume.py  outputs.py  pod.py  provider.py  pulumi-plugin.json  random.py  random_component.py  secret.py  template.py
sdk/python/pulumi_runpod/config/: __init__.pyi  vars.py
tests/: provider_test.go
(+151 files in other folders)
